--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -91,10 +91,10 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Russian: {{t+|ru|секрета́рь|m|f}}, {{t+|ru|секрета́рша|f}} {{qualifier|colloquial for female}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}, {{t|gd|clèireach|m}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|секретар|m}}, {{t|sh|секретарица|f}}
-*: Roman: {{t+|sh|sekretar|m}}, {{t+|sh|sekretarica|f}}
+*: Cyrillic: {{t|sh|секретар|m}}, {{t|sh|секретарица|f}}, {{t|sh|тајник|m}} {{qualifier|Bosnia, Croatia}}, {{t|sh|тајница|f}} {{qualifier|Bosnia, Croatia}}
+*: Roman: {{t+|sh|sekretar|m}}, {{t+|sh|sekretarica|f}}, {{t+|sh|tajnik|m}} {{qualifier|Bosnia, Croatia}}, {{t+|sh|tajnica|f}} {{qualifier|Bosnia, Croatia}}
 * Slovak: {{t|sk|sekretár|m}}, {{t|sk|sekretárka|f}}
-* Slovene: {{t|sl|sekretar|m}}
+* Slovene: {{t|sl|sekretar|m}}, {{t+|sl|tajnik|m}}, {{t|sl|tajnica|f}}
 * Southern Altai: {{t|alt|качы|tr=kaçı|sc=Cyrl}}
 * Spanish: {{t+|es|secretario|m}}, {{t|es|secretaria|f}}
 * Swahili: {{t+|sw|karani}}
