--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -14,6 +14,7 @@
 ====Translations====
 {{trans-top|One of the great tendons situated in each side of the ham, or space back of the knee}}
 * Arabic: {{t|ar|وَتَر اَلْمَأْبَض|m}}
+* French: {{t+|fr|ischio-jambier|m}}
 * German: {{t|de|Hüftgelenkextensoren|m-p}}, {{t|de|ischiocrurale Muskulatur|f}}, {{t|de|rückseitige Oberschenkelmuskulatur|f}}
 * Danish: {{t+|da|hase}}
 * Finnish: {{t+|fi|kinnerjänne}}
