--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -30,62 +30,25 @@
 |cat=v
 }}
 
-====Verb====
-{{zh-verb}}
+===Definitions===
+{{zh-hanzi}}
 
-# [[think]] {{gloss|to conceive of something or someone}}
+# to [[think]] {{gloss|to conceive of something or someone}}
 #* {{zh-x|我 想 她 是 衰老 了。|I think she's going senile.}}
 # to [[think]] about; to [[plan]]; to be [[considering]]
-#* {{zh-x|我 '''想''' 在 暑假 打工。|I'm '''planning''' to get a job for the summer.}}
+#* {{zh-x|我 想 在 暑假 打工。|I'm '''planning''' to get a job for the summer.}}
 # to [[think]]; to [[suppose]]; to [[guess]]; to [[reckon]]
 #* {{zh-x|我 想 我 能 給 你 找到 合適 的 尺碼。|I think I can find the right size for you.}}
 # to [[want]]; to [[wish]] for; to [[desire]]
-#* {{zh-x|還 '''想''' 喝 一 杯 嗎？|Would you '''like''' another drink?}}
-#* {{zh-x|她 '''想''' 當 芭蕾舞 演員。|She '''wants''' to be a ballet dancer.}}
+#* {{zh-x|還 想 喝 一 杯 嗎？|Would you '''like''' another drink?}}
+#* {{zh-x|她 想 當 芭蕾舞 演員。|She '''wants''' to be a ballet dancer.}}
 # to [[miss]] {{gloss|to feel the absence of someone or something}}
-#* {{zh-x|你 走 了 我 會 '''想''' 你 的。|I'll '''miss''' you when you're gone.}}
+#* {{zh-x|你 走 了 我 會 想 你 的。|I'll '''miss''' you when you're gone.}}
 
-=====Compounds=====
-{{der3|title=Compounds
-| {{zh-l|想必}}
-| {{zh-l|想不到}}
-| {{zh-l|想不開}}
-| {{zh-l|想當然}}
-| {{zh-l|想得開}}
-| {{zh-l|想得美}}
-| {{zh-l|想到}}
-| {{zh-l|想法}}
-| {{zh-l|想方設法}}
-| {{zh-l|想家}}
-| {{zh-l|想開}}
-| {{zh-l|想來}}
-| {{zh-l|想念}}
-| {{zh-l|想起}}
-| {{zh-l|想起來}}
-| {{zh-l|想入非非}}
-| {{zh-l|想睡}}
-| {{zh-l|想通}}
-| {{zh-l|想望}}
-| {{zh-l|想像/想象}}
-| {{zh-l|想像/想象力}}
-| {{zh-l|想要}}
-| {{zh-l|猜想}}
-| {{zh-l|感想}}
-| {{zh-l|構想}}
-| {{zh-l|幻想}}
-| {{zh-l|回想}}
-| {{zh-l|空想}}
-| {{zh-l|理想}}
-| {{zh-l|夢想}}
-| {{zh-l|瞑想}}
-| {{zh-l|思前想後}}
-| {{zh-l|妄想}}
-| {{zh-l|心想事成}}
-| {{zh-l|意想}}
-}}
+===Compounds===
+{{zh-der|想必|想不到|想不開|想當然|想得開|想得美|想到|想法|想方設法|想家|想開|想來|想念|想起|想起來|想入非非|想睡|想通|想望|想像/想象|想像/想象力|想要|猜想|感想|構想|幻想|回想|空想|理想|夢想|瞑想|思前想後|妄想|心想事成|意想|不堪設想|不想|中心思想|伏想|休想|假想|假想敵|傾想|儘想|冥思苦想|冥想|凝想|前思後想|千思萬想|可想而知|呆想|夢勞魂想|夢想成真|奇想|妄想症|妙想|封建思想|左思右想|巴想|幻想力|幻想曲|幻想派|心無二想|思想|思想史|思想家|思想庫|思想戰|悁想|想一想|想不透|想不通|想來想去|想像|想像力|想前顧後|想度|想慕|想法子|想當然耳|想碴兒|想見|想頭|意想不到|慨想|懷想|懸想|戰略思想|推想|揣想|摹想|料想|暗想|暢想|暮想朝思|有想頭|朝思夕想|朝思暮想|東想西想|沒心想|沒心沒想|沒想到|沒想頭|浮想|浮想聯翩|涉想|渴想|濠濮間想|無想頭|煩想|狂想|狂想曲|獃想|玄想|理想主義|理想化|理想國|異想天開|痴心妄想|痴想|白想想|眠思夢想|瞎想|神仙思想|突發奇想|緬想|老莊思想|聯想|聯想力|胡思亂想|胡想|臆想幣|苦思惡想|茶思飯想|著想|行思坐想|觀想念佛|設想|試想|貪心妄想|追想|退一步想|逸想|遐想|難以想像|非非想|預想|默想}}
 
-====References====
-* {{qualifier|Hakka}} [http://minhakka.ling.sinica.edu.tw/bkg/hakyin/search.php?DETAIL=1&LIMIT=id=39415&dbname=su_tian_1&graph=2 Academia Sinica - Hakka-English Dictionary]
+===References===
 * {{qualifier|Hakka}} {{R:hak:Lau 1997}}
 * {{qualifier|Min Nan}} {{thcwd|9450}}
 
