--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -52,7 +52,7 @@
 * French: {{t+|fr|République tchèque|f}}, {{t+|fr|Tchéquie|f}}
 * Frisian:
 *: West Frisian: {{t|fy|Tsjechje}}
-* Georgian: {{t|ka|ჩეხეთი|sc=Geor}}
+* Georgian: {{t|ka|ჩეხეთი|sc=Geor}}, {{t|ka|ჩეხეთის რესპუბლიკა|sc=Geor}}
 * German: {{t+|de|Tschechische Republik|f}}, {{t+|de|Tschechien|n}}, rarely {{t+|de|Tschechei|f}}
 * Greek: {{t|el|Δημοκρατία της Τσεχίας|f}}, {{t+|el|Τσεχία|f}}
 *: Pontic Greek: {{t|pnt|Δημοκρατίαν τη Τσεχίας}}, {{t|pnt|Τσεχία}}
@@ -77,8 +77,8 @@
 * Kurdish: {{t|ku|Komara Çêkiyayê}}
 * Kyrgyz: {{t|ky|Чех Республикасы|sc=Cyrl}}, {{t|ky|Чехия|sc=Cyrl}}
 * Lao: {{t|lo|ສາທາລະນະລັດແຊັກ|sc=Laoo}}, {{t|lo|ເຊັກກີ|sc=Laoo}}
-* Latin: {{t|la|Respublica Cecha|f}}, {{t|la|Cechia|f}}, {{t|la|Czechia|f}}, {{t|la|Tzechia|f}}
 {{trans-mid}}
+* Latin: {{t|la|Respublica Cecha|f}}, {{t|la|Cechia|f}}, {{t|la|Czechia|f}}, {{t|la|Tzechia|f}}
 * Latvian: {{t|lv|Čehijas Republika|f}}, {{t+|lv|Čehija|f}}
 * Lithuanian: {{t+|lt|Čekijos Respublika|f}}, {{t+|lt|Čekija|f}}
 * Luxembourgish: {{t+|lb|Tschechesch Republik}}, {{t|lb|d'[[Tschechei]]|f}}
