--- a/en/偵/偵.11141.wikitext
+++ b/en/偵/偵.11141.wikitext
@@ -33,7 +33,7 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=人09}}
 
-# {{defn|lang=ja|sort=人09}}
+# [[investigation]], [[spy]], [[detective]]
 
 ====Readings====
 * {{ja-readings|goon=[[ちょう]] (chō)|kanon=[[てい]] (tei)|kun=[[うかがう]] (ukagau)}}
