--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -28,7 +28,8 @@
 {{trans-see|biceps femoris}}
 
 ===Verb===
-{{en-verb|hamstrings|hamstringing|'''[[hamstrung]]''' or '''[[hamstringed]]'''}}
+{{en-verb|hamstrings|hamstringing|hamstrung|past2=hamstringed}}
+
 
 # {{lb|en|transitive}} To [[lame]] or [[disable]] by [[cut]]ting the [[tendon]]s of the [[ham]] or [[knee]]; to hough; hence, to cripple; to incapacitate; to disable.
 #* So have they '''hamstrung''' the valor of the subject by seeking to effeminate us all at home. - [[w:John Milton|John Milton]]
