--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -202,6 +202,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Greek: {{t+|el|κοστίζω}} (means also "to cause damage or distress"), {{t+|el|στοιχίζω}} (means also "to inflict" and "to align"), {{t+|el|τιμώμαι}}, {{t+|el|κάνω}} [colloquial (has a huge number of meanings, one of them is "to cost")]
 * Hungarian: {{t+|hu|kerül}}
 * Icelandic: {{t+|is|kosta}}
+* Ido: {{t+|io|kustar}}
 * Indonesian: [[habis|menghabiskan]] biaya
 * Interlingua: {{t|ia|costar}}
 * Irish: {{t|ga|cosain}}
