--- a/en/型/型.13070.wikitext
+++ b/en/型/型.13070.wikitext
@@ -21,14 +21,14 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han etym}}
+
 ===Pronunciation===
 {{zh-pron
 |m=xíng
 |c=jing4
-|h=pfs=
-|md=
 |mn=hêng
-|w=
 |mc=y
 |oc=y
 |cat=
@@ -37,7 +37,10 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|人口轉型|句型|大型|大型油輪|巨型|定型|大型電腦|原型|型式|典型作風|大帶型|外型|意識型態|典型人物|心型|大型家電|型別轉換|小型股|公路類型|小型|中型|微型|典型足式|型錄|小型報|大型節目|大型企業|型態|型號|反叛型|典型|型鋼|林型|模型玩具|成型|整型|模型|模型飛機|碟型天線|石膏模型|核型|熱定型|生活型態|特型演員|流線型|新型|整型外科|體型|類型|蠟原型|舊型|題型|重型|雛型|臺型|網路型錄|造型|髮型|轉型|轉型期|臉型|血型|線型函數}}
 
 ----
 
@@ -57,7 +60,7 @@
 * {{ja-readings|goon=[[ぎょう]] (gyō)|kanon=[[けい]] (kei)|kun=[[かた]] (kata)}}
 
 ====Compounds====
-* [[模型]]
+* {{ja-r|模型|もけい}}
 
 ====See also====
 * {{pedialite|lang=ja}}
