--- a/en/惟/惟.15604.wikitext
+++ b/en/惟/惟.15604.wikitext
@@ -26,8 +26,11 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# [[but]], [[however]], [[nevertheless]]
+# [[but]]; [[however]]; [[nevertheless]]
 # [[only]]
+
+===Compounds===
+{{zh-der|惟命是聽|匪惟|惟命是從|令出惟行|惟力是視|惟精惟一|惟恐|惟利是營|惟利是圖|不惟|伏惟|人心惟危|惟利是逐|思惟|惟天可表|授職惟賢|正思惟|禍福惟人|洪惟|民惟邦本|明德惟馨|非惟}}
 
 ----
 
