--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -120,7 +120,9 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Nahuatl: {{t|nah|Yancuīc Zetlālpan}}
 * Nepali: {{t|ne|न्युजिल्यान्ड|tr=n'yujilyānḍ|sc=Deva}}
 * Norman: {{t|nrf|Nouvelle Zélande|f}}
-* Norwegian: {{t+|no|New Zealand}}, {{t|no|Ny-Zealand}}
+* Norwegian:
+*: Bokmål: {{t+|nb|New Zealand}}, {{t|nb|Ny-Zealand}}
+*: Nynorsk: {{t+|nn|New Zealand}}, {{t|nn|Ny-Zealand}}
 * Persian: {{t+|fa|نیوزیلند|tr=niyuzilend|sc=fa-Arab}}, {{t|fa|زلاند نو|tr=zelând-e nou|sc=fa-Arab}}, {{t|fa|زلاند جدید|tr=zelând-e jadid|sc=fa-Arab}}
 * Polish: {{t+|pl|Nowa Zelandia|f}}
 * Portuguese: {{t+|pt|Nova Zelândia|f}}
