--- a/en/垛/垛.13087.wikitext
+++ b/en/垛/垛.13087.wikitext
@@ -12,12 +12,32 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[do2]]|y=do2}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土06}}
+===Pronunciation===
+{{zh-pron
+|m=duò
+|c=do6,do2
+|mn=té
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|垛積|垛子|城垛口|堆垛|垛句|一垛|垛字|一箭上垛|標垛|牆垛子|打垛|駝垛|錢垛|門垛子|點垛|箭垛}}
+
+===References===
+* {{R:yue:Hanzi}}
 
 ----
 
@@ -30,15 +50,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[だ]] (da)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[duǒ]] ([[duo3]])|wg=to<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
 
 ----
 
