--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -111,7 +111,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Ido: {{t+|io|stomako}}
 * Igbo: {{t-needed|ig}}
 * Indonesian: {{t+|id|perut}}
-* Interlingua: {{t-needed|ia}}
+* Interlingua: {{t+|ia|stomacho}}
 * Interlingue: {{t-needed|ie}}
 * Iranun: {{t|ill|tian}}
 * Irish: {{t|ga|goile|m}}
