--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -41,7 +41,7 @@
 *: Cantonese: {{t|yue|英國|tr=jing1 gwok3|sc=Hani}}, {{t|yue|大英聯合王國|tr=daai6 jing1 lyun4 hap6 wong4 gwok3|sc=Hani}}
 *: Mandarin: {{t+|cmn|英國|sc=Hani}}, {{t+|cmn|英国|tr=Yīngguó|sc=Hani}}, {{t|cmn|大不列顛及北愛爾蘭聯合王國|sc=Hani}}, {{t|cmn|大不列颠及北爱尔兰联合王国|tr=Dà-Bùlièdiān jí Běi-Ài'ěrlán Liánhé Wángguó|sc=Hani}}, {{t+|cmn|聯合王國|sc=Hani}}, {{t+|cmn|联合王国|tr=Liánhé Wángguó|sc=Hani}}
 * Czech: {{t+|cs|Spojené království|n}}
-* Danish: {{t|da|Forenede Kongerige}}
+* Danish: {{t|da|Forenede Kongerige|n}}
 * Dutch: {{t+|nl|Verenigd Koninkrijk|n}}
 * Dzongkha: {{t|dz|ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ}}
 * Esperanto: {{t|eo|Unuiĝinta Regno}}
