--- a/en/慌/慌.15711.wikitext
+++ b/en/慌/慌.15711.wikitext
@@ -22,12 +22,23 @@ Note: The right-middle part could be found as [[亾]] instead of [[亡]].
 ===Pronunciation===
 {{zh-pron
 |m=huāng
-|c=fong1
+|c=fong1,fong2
 |mc=y
 |oc=y
 |ma=Zh-huang.ogg
-|cat=a
+|cat=
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|慌成一團|急慌|慌了手腳|恐慌|慌忙無措|心慌|慌速|慌腿|慌手慌腳|慌慌忙忙|慌慌張張|慌悚|慌忙|慌張|慌了神兒|慌亂|慌不擇路|愴慌|意亂心慌|慌急|悶得慌|恐慌症|心慌膽戰|心慌意亂|慌手忙腳|亂得慌|害慌|慌張勢煞|慌裡慌張|慌神|不慌不忙|口隔心慌|慌張慌智|堵得慌|慌腳雞|磣的慌|戃慌|手慌腳忙|發慌|撐的慌|經濟恐慌|驚慌失色|鬼慌|驚慌失措|驚慌|貪慌|腸慌腹熱|累得慌|膩的慌|著慌|鬧的慌}}
+
+===References===
+* {{R:yue:Hanzi}}
 
 ----
 
