--- a/en/傑/傑.11170.wikitext
+++ b/en/傑/傑.11170.wikitext
@@ -24,9 +24,7 @@
 |m=jié
 |c=git6
 |h=pfs=kiet
-|md=
 |mn=kia̍t
-|w=
 |mc=y
 |oc=y
 |cat=
@@ -35,11 +33,10 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{rfdef|zh}}
 
 ====Compounds====
-* {{zh-l|傑出}}
-* {{zh-l|傑作}}
+{{zh-der|傑出|傑作|俊傑|人傑地靈|四傑|怪傑|初唐四傑|地靈人傑|人傑|女中豪傑|傑克|精心傑作|豪傑|英傑|英雄豪傑}}
 
 ----
 
