--- a/en/愚/愚.15662.wikitext
+++ b/en/愚/愚.15662.wikitext
@@ -3,8 +3,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=60332|canj=WBP|ids=⿱禺心}}
 
-# [[stupid]], [[doltish]], [[foolish]]
-
 ====References====
 * {{Han ref|kx=0395.120|dkj=10946|hdz=42321.070|uh=611A|ud=24858|bh=B74D|bd=46925}}
 
@@ -15,66 +13,32 @@
 
 ===Glyph origin===
 {{Han etym}}
-{{Han compound|禺|心|t2=heart|ls=psc|c1=p|c2=s}} – stupid, a personality trait (心).
+{{Han compound|禺|心|t2=heart|ls=psc|c1=p|c2=s}} – stupid.
 
 ===Pronunciation===
 {{zh-pron
 |m=yú
 |c=jyu4
+|h=pfs=ngì
+|md=ngṳ̀/kṳ̀
+|md_note=ngṳ̀ - literary; kṳ̀ - vernacular
+|mn=gû
+|w=3nyy
 |mc=y
 |oc=y
-|ma=Zh-yú.ogg
-|cat=a,v
+|ma=y
+|cat=a,v,pron
 }}
 
-====Adjective====
-{{zh-adj}}
+===Definitions===
+{{zh-hanzi}}
 
-# [[foolish]], [[stupid]]
+# [[foolish]]; [[stupid]]
+# to [[fool]]; to [[dupe]]
+# {{lb|zh|humble}} [[I]]
 
-====Verb====
-{{zh-verb}}
-
-# to [[fool]], to [[dupe]]
-
-====Compounds====
-{{top3}}
-* [[愚呆]], [[愚騃]]
-* [[愚笨]]
-* [[愚不可及]]
-* [[愚蠢]]
-* [[愚弟]]
-* [[愚钝]], [[愚鈍]]
-* [[愚而好自用]]
-* [[愚夫]]
-* [[愚妇]], [[愚婦]]
-* [[愚公移山]]
-* [[愚见]], [[愚見]]
-{{mid3}}
-* [[愚陋]]
-* [[愚鲁]], [[愚魯]]
-* [[愚昧]]
-* [[愚蒙]]
-* [[愚民]]
-* [[愚民政策]]
-* [[愚弄]]
-* [[愚懦]]
-* [[愚人]]
-* [[愚人节]], [[愚人節]]
-* [[愚顽]], [[愚頑]]
-{{mid3}}
-* [[愚妄]]
-* [[愚兄]]
-* [[愚意]]
-* [[愚者一得]]
-* [[愚忠]]
-* [[愚拙]]
-* [[大智若愚]]
-* [[卢泰愚]], [[盧泰愚]]
-* [[上愚]]
-* [[受愚]]
-* [[下愚]]
-{{bottom}}
+===Compounds===
+{{zh-der|愚騃|愚呆|愚笨|愚不可及|愚蠢|愚弟|愚鈍|愚而好自用|愚夫|愚婦|愚公移山|愚見|愚陋|愚魯|愚昧|愚蒙|愚民|愚民政策|愚弄|愚懦|愚人|愚人節|愚頑|愚妄|愚兄|愚意|愚者一得|愚忠|愚拙|大智若愚|上愚|受愚|下愚|大愚不靈|愚迷|愚夯|愚直|一得之愚|愚眉肉眼|愚痴|愚氣|愚氓|愚戇|愚夫愚婦|愚劣|愚公谷|愚公|凡愚|愚孝|愚濫|使貪使愚|愚昧無知|下愚不移|愚懵|大智如愚|愚公之居|懦愚|振警愚頑|憃愚|疏慵愚鈍|肉眼愚晦|賢愚不分|至愚極陋|藏愚|非愚則誣|肉眼愚眉|鄉愚}}
 
 ----
 
