--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -22,8 +22,8 @@
 {{zh-pron
 |m=hàn
 |c=hon5
-|mn=huāⁿ/ōaⁿ/hān
-|mn_note=huāⁿ/ōaⁿ - vernacular, hān - literary
+|mn=hoāⁿ/ōaⁿ/hān
+|mn_note=hoāⁿ/ōaⁿ - vernacular, hān - literary
 |mc=y
 |oc=y
 |ma=Zh-hàn.ogg
