--- a/en/坰/坰.13043.wikitext
+++ b/en/坰/坰.13043.wikitext
@@ -14,12 +14,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=gwing1}}
+===Pronunciation===
+{{zh-pron
+|m=jiōng
+|c=gwing1
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -42,15 +53,6 @@
 
 # [[field]]
 # [[borderland]], [[vicinity]]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jiōng]] ([[jiong1]])|wg=chiung<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 ----
 
