--- a/en/態/態.15710.wikitext
+++ b/en/態/態.15710.wikitext
@@ -25,9 +25,10 @@
 {{zh-pron
 |m=tài
 |c=taai3
+|mn=thài/thāi
 |mc=y
 |oc=y
-|cat=
+|cat=n
 }}
 
 ===Definitions===
@@ -37,6 +38,9 @@
 
 ====Compounds====
 {{zh-der|一反常態|三態|不勝之態|世態|世態人情|世態炎涼|事態|交態|低姿態|作態|像態|儀態|儀態萬千|儀態萬方|兒女態|凝態|動態|動態平衡|千嬌百態|千態萬狀|千狀萬態|固態|型態|失態|女兒意態|女兒態|姿態|媚態|嬌態|完全變態|容態|富態|小兒之態|尤態|層態|巔峰狀態|常態|常態分班|常態法|形態|形態學|心態|心理變態|忸怩作態|性變態|情態|惺惺作態|意態|意識型態|意識形態|態勢|態度|態度冷靜|態度嚴肅|憨態|故態|故態復萌|柔情綽態|殊豔尤態|氣態|氣態溶液|液態|液態氧|液態溶液|淫情浪態|炎涼世態|物態|物質三態|狀態|狂奴故態|狂態|玻璃狀態|生態|生態地位|生態工程|生態平衡|生態環境|生態系|生態結構|生態農業|生活型態|生活態度|異態|病態|盡態極妍|社會病態|神態|神態自如|神態自若|窘態|窘態畢露|窘態百出|緊急狀態|老態|老態龍鍾|膠著狀態|自然生態|舊態復萌|舞態生風|表態|表態句|裝腔作態|觀念形態|變態|變態心理|超固態|逸態橫生|醉態|醜態|醜態畢露|醜態百出|靜態|靜態說|風態|風雲變態|飽和狀態|體態|體態輕盈|高情逸態}}
+
+====References====
+* {{R:nan:thcwdq}}
 
 ----
 
