--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -1,15 +1,7 @@
 ==Translingual==
 
-===Etymology===
-{{Han etyl}}
-Two pieces of flesh ([[仌]]) left to dry in the sun ([[日]]).
-
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=44601|canj=TA|ids=⿱龷日}}
-
-# [[formerly]]
-# [[ancient]]
-# in the [[beginning]]
 
 ====Derived characters====
 * [[借]] [[惜]] [[醋]] [[錯]] [[耤]] [[猎]]
@@ -22,24 +14,49 @@ Two pieces of flesh ([[仌]]) left to dry in the sun ([[日]]).
 ==Chinese==
 {{zh-forms}}
 
-===Pronunciation===
+===Glyph origin===
+{{Han etyl}}
+Oracle bone form: {{Han compound|𡿧|日|ls=ic|t1=disaster; floods|t2=sun}} – the flood submerging the sun; the former times.
+
+''{{w|Shuowen}}'': Two pieces of flesh ({{zh-l|*仌}}) left to dry in the sun ({{zh-l|*日}}). Original form of {{och-l|腊}}.
+
+===Pronunciation 1===
 {{zh-pron
-|m=昔,,cuò
+|m=昔
 |c=sik1
+|md=sék
 |mn=sek
+|w=4xiq
 |mc=y
 |oc=y
-|ma=
-|cat=adv,a
+|cat=n,pn
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# {{†}} [[dried]] [[meat]]
+# [[former]] [[time]]s; the [[past]]
+# {{†}} [[yesterday]]
+# {{†}} [[sunset]]; [[dusk]]
+# {{†}} {{zh-alt-form|夕|[[evening]]; [[night]]}}
+# {{surname|lang=zh}}
 
-====References====
-* (''Min Nan'') [http://twblg.dict.edu.tw/holodict_new/index.html Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
+====Compounds====
+{{zh-der|平昔|今非昔比|夙昔|往昔|今不如昔|古昔|感今懷昔|奶昔|在昔|密昔斯|密昔司|今昔之感|宿昔|今昔|伊昔|昔昔|撫今追昔|曩昔|昔日|昔酒|昔時|昔人|疇昔|攀今比昔|昔年|非昔是今}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=cuò
+|cat=a,v
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{†}} [[coarse]]; [[rough]]
+# {{†}} {{zh-alt-form|錯|to [[criss-cross]]}}
+# {{†}} {{zh-alt-form|措|to [[use]]; to [[carry out]]}}
 
 ----
 
