--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -1,6 +1,23 @@
 {{also|値}}
 ==Translingual==
-
+{| class="floatright" border=1 cellpadding="5" cellspacing="0"
+|- valign="center"
+| bgcolor="#dfefff"|
+'''[[Simplified Chinese|Simplified]]'''
+|<span class="Hans" lang="zh-hans" style="font-size: 175%">[[值]]</span>
+|- valign="center"
+| bgcolor="#dfefff"|
+'''[[Traditional Chinese|Traditional]]'''
+|<span class="Hant" lang="zh-hant" style="font-size: 175%">[[值]]</span>
+|- valign="center"
+| bgcolor="#dfefff"|
+'''[[Japanese]]'''
+|<span class="Jpan" lang="jp" style="font-size: 175%">[[値]]</span>
+|- valign="center"
+| bgcolor="#dfefff"|
+'''[[Korean]]'''
+|<span class="Ko" lang="ko" style="font-size: 175%">[[値]]</span>
+|}
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=24216|canj=OJBM|ids=⿰亻直}}
 
