--- a/en/偎/偎.11102.wikitext
+++ b/en/偎/偎.11102.wikitext
@@ -12,12 +12,28 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=wui1}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=人09}}
+===Pronunciation===
+{{zh-pron
+|m=wēi
+|c=wui1
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|偎隨|偎儂|偎妻靠婦|偎乾就濕|依偎|偎倚|偎留|偎紅倚翠|偎香倚玉|偎風躲箭|偎慵墮懶|偎傍|倚玉偎香|倚翠偎紅|輕偎低傍}}
 
 ----
 
@@ -45,15 +61,6 @@
 # [[approach]]
 # [[embrace]]
 # [[faint]], [[vague]]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[wēi]] ([[wei1]])|wg=wei<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 [[fr:偎]]
 [[ko:偎]]
