--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -20,21 +20,22 @@
 ===Pronunciation===
 {{zh-pron
 |m=kuì
-|c=kwai3,kwai5
+|c=kwai5,kwai3
 |mc=y
 |oc=y
-|ma=
-|cat=a
+|cat=
 }}
 
-====Compounds====
-* [[愧對]]
-* [[愧恨]]
-* [[愧悔]]
-* [[愧疚]]
-* [[愧色]]
-* [[愧痛]]
+===Definitions===
+{{zh-hanzi}}
 
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|愧對|愧恨|愧悔|愧疚|愧色|愧痛|不愧不怍|不愧屋漏|愧恧|愧怍|俯仰無愧|惶愧|愧汗|問心無愧|受之有愧|感愧並交|慚愧無地|不愧|愧赧|愧汗怍人|愧歉|愧服|愧不敢當|感愧交集|愧惶無地|悔愧|仰不愧天|居心無愧|慚愧|於心無愧|滿面羞愧|捫心無愧|林慚澗愧|文愧金聲|抱愧|無愧|當之無愧|羞愧|討愧|自愧弗如|赧愧}}
+
+===References===
+* {{R:yue:mfccd}}
 ----
 
 ==Japanese==
