--- a/en/倷/倷.11075.wikitext
+++ b/en/倷/倷.11075.wikitext
@@ -10,12 +10,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=noi6}}
+===Pronunciation===
+{{zh-pron
+|m=nǎi
+|c=noi6
+|w=3ne
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人08}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{lb|zh|Wu}} [[you]] (plural), [[you all]]
 
 ----
 
@@ -28,24 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[だい]] (dai), [[ない]] (nai)|kun=[[なんじ]] (nanji)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[nài]] ([[nai4]]), [[zhì]] ([[zhi4]])|wg=nai<sup>4</sup>, chih<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
-
-----
-
-==Wu==
-
-===Hanzi===
-'''倷''' (nē / ne2)
-
-# [[y'all|you all]], you (pl.)
 
 [[fr:倷]]
 [[ko:倷]]
