--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -421,6 +421,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 
 =====Translations=====
 {{trans-top|to make a bridge}}
+* Czech: {{t|cs|přemostit}}
 * Finnish: [[rakentaa#Finnish|rakentaa]] [[silta#Finnish|silta]] [[jonkin#Finnish|jonkin]] {{t+|fi|yli}}
 * German: {{t+|de|überbrücken}}
 * Ido: {{t|io|pontifar}}
