--- a/en/側/側.11140.wikitext
+++ b/en/側/側.11140.wikitext
@@ -14,16 +14,19 @@
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|人|alt1=亻|則|ls=psc|c1=s|c2=p}}.
 
 ===Pronunciation===
 {{zh-pron
 |m=cè
 |c=zak1
 |h=pfs=chet
+|md=cháik/cáik
+|md_note=cháik - “side”; cáik - “to lean to one side”
 |mn=chhek
+|w=4tseq
 |mc=y
 |oc=y
-|ma=
 |cat=n,v
 }}
 
@@ -31,7 +34,10 @@
 {{zh-hanzi}}
 
 # [[side]]
-# to [[incline]], [[slant]], [[lean]]
+# to [[lean]] to one side; to [[incline]]; to [[slant]]
+
+===Compounds===
+{{zh-der|側理紙|側柏|側豔|側滑|側影|側陋|側面|側芽|匾打側卓|側膜胎座|側離|側首|側麗|側鋒|側聽|傾側|側手翻|側錄|側線|側足|一側|側帽|側面圖|側枝|側歪|側蝕力|側耳|側微|側匿|側泳|側言|側記|反側|引人側目|側聞|側眼|側席|左側|側門|側室|側根|側筆|側脈|外側|展轉反側|側身|側重|側壓力|側翼|側擊|右側通行|右側|偪側|側視圖|側媚|側臥|側目|兩側|側目而視|側偃|攲側|東側|扶側|旁敲側擊|珠玉在側|清君側|搜揚側陋|轉輾反側|轉側不安|輾轉反側|重足側目|轉側|道路側目|逼側|腹側體腔|車側氣囊|翼側}}
 
 ----
 
