--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -106,6 +106,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 * Finnish: {{t+|fi|vaalea}}
 * French: {{t+|fr|blond|m}}
 * German: {{t+|de|blond}}, {{t+|de|hell}}
+* Ido: {{t+|io|blonda}}
 * Japanese: {{t|ja|金髪|tr=きんぱつの, kinpatsu-no|alt=金髪の|sc=Jpan}}
 {{trans-mid}}
 * Norman: {{t|nrf|bliond}}
