--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -1,6 +1,5 @@
-[[File:Coat of arms of New Zealand.svg|thumb|Coat of arms of New Zealand]]
 ==English==
-{{wikipedia}}
+[[File:Coat of arms of New Zealand.svg|160px|thumb|Coat of arms of New Zealand]]
 
 ===Etymology===
 From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlement in [[Batavia]], which in turn had been named after the Dutch province of [[Zeeland]].
@@ -175,6 +174,9 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 
 ===See also===
 * {{l|en|Appendix:Countries of the world}}
+
+===External links===
+* {{pedialite}}
 
 [[Category:en:Countries]]
 [[Category:en:Countries of Oceania]]
