--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -70,7 +70,7 @@
 # {{n-g|Interjection used to express surprise}}: [[oh]]; [[ah]]
 
 ===Compounds===
-{{zh-der|惡心|惡霸|惡報|惡變|惡病質|惡臭|惡道|惡德|惡鬥|惡毒|惡感|惡狗|惡貫滿盈|惡鬼|惡棍|惡果|惡耗|惡狠狠|惡化|惡疾|惡蹟|惡口|惡辣|惡浪|惡劣|惡露:[[lochia]]|惡罵|惡夢|惡名|惡魔|惡唸|惡癖|惡氣|惡趣|惡人|惡煞|惡少|惡聲|惡聲惡氣|惡水|惡俗|惡徒|惡習|惡相|惡行|惡性|惡性循環|惡性腫瘤|惡兇兇|惡言|惡言惡語|惡意|惡因|惡語|惡語中傷|惡運|惡戰|惡仗|惡濁|惡阻|惡作劇|可惡|三惡道|不念舊惡|不惡而嚴|中惡|乞留惡濫|五濁惡世|交惡|作惡|作惡多端|做好做惡|元惡|元惡大奸|元惡大憝|凶惡|凶神惡煞|刁惡|剗惡除奸|剪惡除奸|助惡|勸善懲惡|勸善戒惡|勸善黜惡|十惡|十惡不赦|千刁萬惡|厭惡|同惡相助|同惡相救|同惡相求|同惡相濟|善善惡惡|喑惡叱吒|嚴惡|大惡|好善嫉惡|好善惡惡|好惡|好生惡殺|好諛惡直|好逸惡勞|姑惡|嫉惡|嫉惡好善|嫉惡如仇|嫉惡若仇|嫌好道惡|嫌惡|差惡|彰善癉惡|忒惡|怒惡|怙惡不悛|怙惡不改|性惡說|惡例|惡兆|惡勢力|惡叉白賴|惡名昭彰|惡哏哏|惡地|惡婦|惡嫌|惡子|惡孽|惡客|惡寒|惡性倒閉|惡性競爭|惡性貧血|惡惡|惡惡實實|惡惡從短|惡憐|惡支殺|惡曜|惡月|惡有|惡有惡報|惡業|惡模惡樣|惡歲|惡法|惡漢|惡濕居下|惡犬|惡瘡|惡發|惡直醜正|惡眉惡眼|惡稔禍盈|惡稔罪盈|惡稔貫盈|惡積禍盈|惡紫奪朱|惡緣惡業|惡衣惡食|惡衣糲食|惡衣菲食|惡衣蔬食|惡補|惡言潑語|惡言詈辭|惡訊|惡詫|惡識|惡貫禍盈|惡賴|惡躁|惡逆|惡運當頭|惡醉強酒|惡限|惡障|惡風|惡食|惡黨|愛遠惡近|憎惡|懲惡勸善|懲惡獎善|懷惡不悛|戀生惡死|打惡心|扶善懲惡|抑惡揚善|掩惡揚善|掩惡溢美|掩罪藏惡|播惡遺臭|改惡向善|改惡從善|改惡行善|旌善懲惡|日趨惡劣|是非善惡|欣生惡死|欺善怕惡|止惡揚善|深惡痛嫉|深惡痛絕|溢惡|濟惡|為惡不悛|無惡不作|犯惡|狠惡|獰惡|畏影惡跡|疾惡|疾惡好善|疾惡如仇|疾惡若仇|痛惡|癉惡彰善|禍因惡積|禍盈惡稔|禍稔惡盈|萬惡|稔惡不悛|積惡|積惡餘殃|窮凶惡極|窮凶極惡|窮山惡水|粗惡|粗衣惡食|罪大惡極|罪惡|罪惡如山|罪惡感|罪惡昭著|罪惡深重|罪惡滔天|罪惡貫盈|美惡|羞惡|腐惡|自食惡果|舊惡|苦思惡想|菲衣惡食|薄惡|褒善貶惡|褒賢遏惡|討惡剪暴|諱惡不悛|貧嘴惡舌|貪生惡死|賞善罰惡|賣惡|辟惡|辟惡除患|逢君之惡|遏惡揚善|遠惡|邪惡|酒惡|醜惡|醜類惡物|釁惡|長君之惡|長惡不悛|除惡務本|除惡務盡|除惡扶善|陰惡|險惡|隱惡揚善|面善心惡|面惡心善|風塵惡俗|首惡|鬼怕惡人}}
+{{zh-der|惡心|惡霸|惡報|惡變|惡病質|惡臭|惡道|惡德|惡鬥|惡毒|惡感|惡狗|惡貫滿盈|惡鬼|惡棍|惡果|惡耗|惡狠狠|惡化|惡疾|惡蹟|惡口|惡辣|惡浪|惡劣|惡露:[[lochia]]|惡罵|惡夢|惡名|惡魔|惡唸|惡癖|惡氣|惡趣|惡人|惡煞|惡少|惡聲|惡聲惡氣|惡水|惡俗|惡徒|惡習|惡相|惡行|惡性|惡性循環|惡性腫瘤|惡兇兇|惡言|惡言惡語|惡意|惡因|惡語|惡語中傷|惡運|惡戰|惡仗|惡濁|惡阻|惡作劇|可惡|三惡道|不念舊惡|不惡而嚴|中惡|乞留惡濫|五濁惡世|交惡|作惡|作惡多端|做好做惡|元惡|元惡大奸|元惡大憝|凶惡|凶神惡煞|刁惡|剗惡除奸|剪惡除奸|助惡|勸善懲惡|勸善戒惡|勸善黜惡|十惡|十惡不赦|千刁萬惡|厭惡|同惡相助|同惡相救|同惡相求|同惡相濟|善善惡惡|喑惡叱吒|嚴惡|大惡|好善嫉惡|好善惡惡|好惡|好生惡殺|好諛惡直|好逸惡勞|姑惡|嫉惡|嫉惡好善|嫉惡如仇|嫉惡若仇|嫌好道惡|嫌惡|差惡|彰善癉惡|忒惡|怒惡|怙惡不悛|怙惡不改|性惡說|惡例|惡兆|惡勢力|惡叉白賴|惡名昭彰|惡哏哏|惡地|惡婦|惡嫌|惡子|惡孽|惡客|惡寒|惡性倒閉|惡性競爭|惡性貧血|惡惡|惡惡實實|惡惡從短|惡憐|惡支殺|惡曜|惡月|惡有|惡有惡報|惡業|惡模惡樣|惡歲|惡法|惡漢|惡濕居下|惡犬|惡瘡|惡發|惡直醜正|惡眉惡眼|惡稔禍盈|惡稔罪盈|惡稔貫盈|惡積禍盈|惡紫奪朱|惡緣惡業|惡衣惡食|惡衣糲食|惡衣菲食|惡衣蔬食|惡補|惡言潑語|惡言詈辭|惡訊|惡詫|惡識|惡貫禍盈|惡賴|惡躁|惡逆|惡運當頭|惡醉強酒|惡限|惡障|惡風|惡食|惡黨|愛遠惡近|憎惡|懲惡勸善|懲惡獎善|懷惡不悛|戀生惡死|打惡心|扶善懲惡|抑惡揚善|掩惡揚善|掩惡溢美|掩罪藏惡|播惡遺臭|改惡向善|改惡從善|改惡行善|旌善懲惡|日趨惡劣|是非善惡|欣生惡死|欺善怕惡|止惡揚善|深惡痛嫉|深惡痛絕|溢惡|濟惡|為惡不悛|無惡不作|犯惡|狠惡|獰惡|畏影惡跡|疾惡|疾惡好善|疾惡如仇|疾惡若仇|痛惡|癉惡彰善|禍因惡積|禍盈惡稔|禍稔惡盈|萬惡|稔惡不悛|積惡|積惡餘殃|窮凶惡極|窮凶極惡|窮山惡水|粗惡|粗衣惡食|罪大惡極|罪惡|罪惡如山|罪惡感|罪惡昭著|罪惡深重|罪惡滔天|罪惡貫盈|美惡|羞惡|腐惡|自食惡果|舊惡|苦思惡想|菲衣惡食|薄惡|褒善貶惡|褒賢遏惡|討惡剪暴|諱惡不悛|貧嘴惡舌|貪生惡死|賞善罰惡|賣惡|辟惡|辟惡除患|逢君之惡|遏惡揚善|遠惡|邪惡|酒惡|醜惡|醜類惡物|釁惡|長君之惡|長惡不悛|除惡務本|除惡務盡|除惡扶善|陰惡|險惡|隱惡揚善|面善心惡|面惡心善|風塵惡俗|首惡|鬼怕惡人|惡雞婆}}
 
 ----
 
