--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -522,6 +522,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Arabic: {{t|ar|مَسْرَحِيَّة|f}}
 * Belarusian: {{t|be|дзеятвор|sc=Cyrl}}
 * Dutch: {{t+|nl|schouwspel|n}}
+* Erzya: {{t|myv|налкума}}
 * Finnish: {{t+|fi|näytelmä}}
 * Indonesian: {{t+|id|drama}}, {{t|id|naskah drama}}
 * Irish: {{t|ga|dráma|m}}
