--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -6,9 +6,9 @@
 ===Pronunciation===
 * {{enPR|bŭtʹ-ər}}, {{IPA|/ˈbʌ.təɹ/|lang=en}}
 *** {{a|RP}} {{IPA|/ˈbʌ.tə/|lang=en}}
-*** {{audio|En-uk-butter.ogg|Audio (UK)|lang=en}}
-*** {{a|US}} {{IPA|/ˈbʌ.tɚ/|[ˈbʌɾɚ]|lang=en}}
-*** {{audio|en-us-butter.ogg|Audio (US)|lang=en}}
+*** {{audio|En-uk-butter.ogg|Audio (RP)|lang=en}}
+*** {{a|GA}} {{IPA|/ˈbʌ.tɚ/|[ˈbʌɾɚ]|lang=en}}
+*** {{audio|en-us-butter.ogg|Audio (GA)|lang=en}}
 ** {{rhymes|ʌtə(r)|lang=en}}
 * {{a|Northern and Midland England, Wales, Scotland}} {{IPA|/ˈbʊ.tə/|lang=en}}
 ** {{rhymes|ʊtə(r)|lang=en}}
