--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -277,7 +277,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Tatar: {{t|tt|Алмания|sc=Cyrl}}
 * Telugu: {{t+|te|జర్మనీ}}
 * Thai: {{t+|th|เยอรมนี|sc=Thai}}
-* Tibetan: {{t|bo|འཇར་མན།|sc=Tibt}}
+* Tibetan: {{t|bo|འཇར་མན|sc=Tibt}}
 * Tigrinya: {{t|ti|ጀርመን|sc=Ethi}}
 * Turkish: {{t+|tr|Almanya}}
 * Turkmen: {{t|tk|Germaniýa}}
