--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -113,12 +113,12 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Abkhaz: {{t|ab|Алмантәыла|sc=Cyrl}}
 * Acehnese: {{t|ace|Jeureuman}}
 * Afrikaans: {{t+|af|Duitsland}}
-* Albanian: {{t+|sq|Gjermania|f}}
-* Amharic: {{t|am|ጀርመን|sc=Ethi}}
+* Albanian: {{t+|sq|Gjermania}}
+* Amharic: {{t|am|ጀርመን|sc=Ethi}}, {{t|am|ጀርመን|sc=Ethi}}
 * Arabic: {{t+|ar|أَلْمَانْيَا|f}}
 *: Egyptian Arabic: {{t|arz|ألمانيا|sc=Arab}}
 * Aragonese: {{t|an|Alemanya|f}}
-* Aramaic: {{t|arc|ܓܪܡܢ|tr=jerman}}
+* Aramaic: {{t|arc|ܓܪܡܢ|tr=Jerman}}
 * Armenian: {{t+|hy|Գերմանիա}}
 * Aromanian: {{t|rup|Ghermãnia}}
 * Asturian: {{t+|ast|Alemaña|f}}
@@ -139,6 +139,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Bulgarian: {{t+|bg|Герма́ния|f}}
 * Burmese: {{t|my|ဂျာမနီ|sc=Mymr}}
 * Catalan: {{t+|ca|Alemanya|f}}, {{t+|ca|Alemània|f}}
+* Chechen: {{t|ce|Германи}}
 * Cherokee: {{t+|chr|ᎠᏛᏥ|sc=Cher}}
 * Chinese:
 *: Cantonese: {{t|yue|德國|sc=Hani}}, {{t|yue|德国|tr=dak1 gwok3|sc=Hani}}
@@ -151,7 +152,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Danish: {{t+|da|Tyskland|n}}
 * Dhivehi: {{t|dv|ޖަރުމަނުވިލާތް}}
 * Dutch: {{t+|nl|Duitsland|n}}
-* Dzongkha: {{t|dz|ཇཱར་མ་ནི|sc=Tibt}}
+* Dzongkha: {{t|dz|ཇཱར་མ་ནི་|sc=Tibt}}
 * East Futuna: {{t|fud|Siamani}}
 * Esperanto: {{t+|eo|Germanio}}, {{t+|eo|Germanujo}}
 * Estonian: {{t+|et|Saksamaa}}
@@ -268,7 +269,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 *: Cyrillic: {{t|sh|Немачка|f|sc=Cyrl}}
 *: Roman: {{t|sh|Nemačka|f}}
 * Sicilian: {{t|scn|Girmania|f}}
-* Silesian: {{t|szl|Mjymcy|p}}
+* Silesian: {{t|szl|Mjymcy}}
 * Sinhalese: {{t|si|ජර්මනිය|sc=Sinh}}
 * Slovak: {{t+|sk|Nemecko|n}}
 * Slovene: {{t+|sl|Némčija|f}}
