--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -175,7 +175,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 *: Cyrillic: {{t|sh|и̏грати|impf|sc=Cyrl}}
 *: Roman: {{t+|sh|ȉgrati|impf}}
 * Sicilian: {{t+|scn|giucari}}, {{t+|scn|jucari}}
-* Slovak: {{t|sk|hrať sa}}
+* Slovak: {{t|sk|hrať sa}}, {{t|sk|hrať|impf}}
 * Slovene: {{t+|sl|igrati se|impf}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|graś|impf}}
