--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -162,7 +162,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Old English: {{t|ang|lācan}}, {{t|ang|gamenian}}, {{t|ang|plegan}}
 * Pashto: {{t|ps|لوبې كول|tr=lobe kawəl|sc=ps-Arab}}, {{t|ps|لوبول|tr=lobawəl|sc=ps-Arab}}
 * Persian: {{t+|fa|بازی کردن|tr=bâzi kardan|sc=fa-Arab}}
-* Polish: {{t+|pl|bawić się|impf}}, {{t+|pl|grać|impf}}
+* Polish: {{t+|pl|grać|impf}}, {{t+|pl|bawić się|impf}}
 * Portuguese: {{t+|pt|jogar}}, {{t+|pt|brincar}}
 * Quechua: {{t|qu|pukllay}}, {{t|qu|awsay}}, {{t|qu|pukllai}}
 * Romani: {{t|rom|khelel}}
@@ -175,8 +175,8 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 *: Cyrillic: {{t|sh|и̏грати|impf|sc=Cyrl}}
 *: Roman: {{t+|sh|ȉgrati|impf}}
 * Sicilian: {{t+|scn|giucari}}, {{t+|scn|jucari}}
-* Slovak: {{t|sk|hrať sa}}, {{t|sk|hrať|impf}}
-* Slovene: {{t+|sl|igrati se|impf}}, {{t+|sl|igráti|impf}}
+* Slovak: {{t|sk|hrať|impf}}
+* Slovene: {{t+|sl|igráti|impf}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|graś|impf}}
 *: Upper Sorbian: {{t|hsb|hrać|impf}}, {{t|hsb|zahrać|pf}}
