--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -6,6 +6,7 @@
 * {{IPA|/fiːl/|lang=en}}
 * {{audio|en-us-feel.ogg|Audio (US)|lang=en}}
 * {{rhymes|iːl|lang=en}}
+[[Category:English 1-syllable words]]
 
 ===Etymology 1===
 From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to feel, perceive, touch}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*fōlijaną||to taste, feel}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*pelem-}}, {{m|ine-pro|*pal-||to swing, shake}}. Cognate with {{cog|sco|fele||to feel}}, {{cog|fy|fiele||to sense, feel}}, {{cog|nl|voelen||to feel}}, {{cog|nds|fölen}}, {{m|nds|föhlen||to feel}}, {{cog|de|fühlen||to feel}}, {{cog|da|føle||to feel}}, and through Indo-European, with {{cog|la|palpō||touch, feel, caress, pat}}, {{cog|grc|πάλλω||swing, shake, shake loose}}.
