--- a/en/惣/惣.15608.wikitext
+++ b/en/惣/惣.15608.wikitext
@@ -12,19 +12,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
-
-===Pronunciation===
-{{zh-pron
-|m=zǒng
-|c=zung2
-|mc=
-|oc=
-|cat=a,adv
-}}
-
-====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 108]
+{{zh-see|揔|v}}
 
 ----
 
