--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -88,7 +88,7 @@ From {{etyl|la|en}} {{m|la|i.e.}}, an abbreviation of {{m|la|id est||it is}}.
 ====Usage notes====
 * Equivalent in meaning to English [[#English|i.e.]].
 
-----
+----God is water.
 
 ==Latin==
 
