--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -58,7 +58,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Hindi: {{t+|hi|कछुआ|m|tr=kachu'ā|sc=Deva}}
 * Hungarian: {{t+|hu|teknősbéka}}, {{t+|hu|teknős}}
 * Icelandic: {{t|is|landskjaldbaka|f}}, {{t+|is|skjaldbaka|f}} {{qualifier|tortoise or turtle}}
-* Ido: {{qualifier|♂♀}} {{t+|io|tortugo}}, {{qualifier|♂}} {{t|io|tortugulo}}, {{qualifier|♀}} {{t|io|tortugino}}
+* Ido: {{t+|io|tortugo}}
 * Igbo: {{t|ig|mbeku}}
 * Indonesian: {{t+|id|kura-kura}}, {{t+|id|penyu}}
 * Interlingue: {{t|ie|tortug}}
@@ -124,7 +124,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 *: Persic: {{t|ug|تاشپاقا|sc=fa-Arab}}
 * Uzbek: {{qualifier|tortoise or turtle}} {{t+|uz|toshbaqa}}
 * Vietnamese: {{qualifier|tortoise or turtle}} {{t+|vi|rùa}}
-* Volapük: {{qualifier|♂♀}} {{t|vo|tortug}}, {{qualifier|♂}} {{t|vo|hitortug}}, {{qualifier|♀}} {{t|vo|jitortug}}, {{qualifier|♂♀ offspring}} {{t|vo|tortugül}}, {{qualifier|♂ offspring}} {{t|vo|hitortugül}}, {{qualifier|♀ offspring}} {{t|vo|jitortugül}}
+* Volapük: {{t|vo|tortug}}
 * West Coast Bajau: {{t|bdr|kekuro}}
 * West Frisian: {{t|fy|skyldpod}}
 * Yiddish: {{qualifier|tortoise or turtle}} {{t|yi|טשערעפּאַכע|f|tr=tsherepakhe|sc=Hebr}}
