--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -217,6 +217,7 @@ From {{der|en|fro|olive||olive, olive tree}}, from {{der|en|la|olīva||olive}}, 
 *: Bokmål: {{t|nb|olivengrønn}}
 {{trans-mid}}
 * Portuguese: {{t|pt|verde-azeitona}}, {{t+|pt|verde-oliva}}
+* Romanian: {{t+|ro|măsliniu|m}}
 * Russian: {{t+|ru|оли́вковый}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|маслинаст|sc=Cyrl}}
